tests/integration/snapshots/integration__conformance__n_array_double_extra_comma.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
["x",,]
stdout ---

stderr ---
error: expected json value, found `,`
 --> stdin:1:6
  |
1 | ["x",,]
  |     -^
  |     |
  |     expected due to `,`
