tests/integration/snapshots/integration__conformance__n_array_incomplete_invalid_value.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
[x
stdout ---

stderr ---
error: unexpected character `x`. expected start of a json value
 --> stdin:1:2
  |
1 | [x
  |  ^
