tests/integration/snapshots/integration__conformance__n_array_incomplete_invalid_value.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
[x
stderr ---
error: unexpected character `x`. expected start of a json value
 --> stdin:1:2
  |
1 | [x
  |  ^
