tests/integration/snapshots/integration__conformance__n_array_inner_array_no_comma.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
[3[4]]
stdout ---

stderr ---
error: expected entry or closed delimiter `]`, found `[`
 --> stdin:1:3
  |
1 | [3[4]]
  | - ^
  | |
  | expected due to `[`
