tests/integration/snapshots/integration__conformance__n_array_inner_array_no_comma.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdout ---
[3[4]]
stderr ---
error: expected entry or closed delimiter `]`, found `[`
 --> stdin:1:3
  |
1 | [3[4]]
  | - ^
  | |
  | expected due to `[`
